2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/singleton.py (__new__):
	Fix to work with inheritance.

	* gaupol/converter.py:
	* gaupol/tags/ass.py:
	* gaupol/tags/__init__.py:
	* gaupol/tags/internal.py:
	* gaupol/tags/microdvd.py:
	* gaupol/tags/mpl2.py:
	* gaupol/tags/ssa.py:
	* gaupol/tags/subrip.py:
	* gaupol/tags/_taglib.py:
	Simplify TagLibrary interface.

	* gaupol/util.py (once):
	New decorator.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/files/__init__.py:
	* gaupol/i18n.py:
	* gaupol/liner.py:
	* gaupol/paths.py:
	* gaupol/scriptlib.py:
	Minor changes.

	* tools/nose-cover:
	Remove file.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py:
	Remove gc_collected.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/__init__.py:
	Import singleton.Singleton.

	* gaupol/base/singleton.py:
	New file with a Singleton base class.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/nose-cover:
	Fix to work with individual modules.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py:
	Fix module docstring.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py:
	Use a set as TestCase.files.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/files/__init__.py:
	* gaupol/util.py:
	Fix value of __all__.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (memoize):
	Pickle the id of the self argument of methods.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/nose-cover:
	New file.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py:
	* gaupol/unittest/__init__.py:
	Use atexit.register to remove temporary files.

2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/search.py:
	* gaupol/_agents/text.py:
	* gaupol/finder.py:
	* gaupol/gtk/dialogs/search.py:
	Docstring fixes.

2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/__init__.py: